2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/file.py (SubstitutionField): Rework, using
	TupleField as a base class.
	(FileContentsTest.Run): Remove exception-handling code.
	(FileContentsTest.__PerformSubstitutions): Correct.
	* NEWS: Mention change.
	
	* qm/fields.py (ChoiceField): New class.
	* qm/test/test.py (Test.ResourceField): Likewise.
	(Test.TestField): Likewise.
	(Test.arguments): Use them.

2002-12-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/result.py (Result): Update documentation string to more
	clearly describe annotations.
	* qm/test/web/web.py (ResultPage.__init__): Do not add a "This
	Test" link to the run menu for a resource.
	(ResultPage.MakeRunUrl): Rename to ...
	(ResultPage.GetRunURL): ... this.
	(ResultPage.GetResultURL): ... new method.
	(StorageResultsStream.GetResult): New method.
	(QMTestServer.HandleShowResults): Use it.
	* qm/test/share/dtml/result.dtml: Display links to resources, as
	appropriate.
	* NEWS: Note that links to results are now available.

2002-12-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (NewItemPage.GetClassDescriptions): Use
	self.class_names to get the list of classes.
	* NEWS: Note that "File/New Resource" now operates correctly.

2002-12-02    <Mark Mitchell <mark@codesourcery.com>>

	* qm/test/cmdline.py (QMTest.__ExecuteSummarize): Use binary mode
	to read and write results files.
	(QMTest.__GetExpectedOutcomes): Likewise.
	(QMTest.__FilterTestsToRun): Likewise.

2002-12-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/doc/tour.xml: Update for QM 2.0.

	* qm/fields.py (SetPopupPage): Remove.
	(TupleField.GetValueFromDomNode): Fix typo.
	(TupleField.MakeDomNodeForValue): Likewise.

2002-11-29  Mark Mitchell <mark@codesourcery.com>

	* qm/web.py (WebRequestHandler.__HandleFileRequest): Open files in 
	binary mode.
	* qm/test/share/dtml/dir.dtml: Avoid constructs which IE does not 
	like.